[Bug 1254127] Fix get involved margins on mobile

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1104,7 +1104,7 @@ body#home {
                     width: auto;
                 }
                 @media (max-width: @breakMobileLandscape) {
-                    margin: 0 20px;
+                    margin: 0 10px;
                     h2 {
                         margin-bottom: 20px;
                     }
@@ -1200,6 +1200,7 @@ body#home {
                 @media (max-width: @breakMobileLandscape) {
                     width: auto;
                     padding: 40px 0 20px;
+                    margin: 0 10px;
                 }
             }
         }
